# Chi-Geometry

./: LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
chi_geometry/: __init__.py  config.json  create_dataset.py  debug.py  plot.py  utils.py
chi_geometry/dataset/: __init__.py  config.json  create_dataset.py  debug.py  plot.py  utils.py
chi_geometry/model/: __init__.py  e3nn_model.py  train.py  utils.py
examples/: model_requirements.txt
examples/binding_affinity/: download_data.py  e3nn_global_feateng_model_config.json  e3nn_global_model_config.json  e3nn_local_model_config.json  global_e3nn.py  global_e3nn_feat_eng.py  global_e3nn_feateng.py  local_e3nn.py  scratch.py  se3_transformer.py  se3_transformer_model_config.json
examples/classic/: dataset_config.json  main.py  model_config.json
examples/crossed/: dataset_config.json  main.py
examples/distance_oversmoothing_experiment/: create_all_datasets.py  dataset_config.json  examine_embeddings.py  examine_node_grads.py  global_e3nn.py  global_e3nn_feat_eng.py  local_e3nn.py  main.py  model_config.json  oversmoothing_analysis.py  se3_transformer.py  test.py  utils.py
examples/long_range_chirality/: create_all_datasets.py  create_hop_distance_datasets.py  dataset_config.json  dimenet.py  dimenet_model_config.json  e3nn_global_model_config.json  environment.yml  global_e3nn.py  global_e3nn_feat_eng.py  global_e3nn_feateng.py  local_e3nn.py  local_e3nn_virtual_node.py  model_config.json  oversmoothing_analysis.py  oversquashing_analysis.py  se3_transformer.py  se3_transformer_model_config.json  vanilla_mpnn.py
examples/model/: e3nn_model.py  train.py  utils.py
examples/pretraining-experiments/: binding_affinity.py  binding_efficiency_data.py  binding_posttrain.py  dataset_config.json  (+6 more)
tests/: full_test.py  test_dataset_config.json  test_model_config.json
(+119 files in other folders)
