[build-system]
requires = ["setuptools>=68.0", "wheel>=0.37.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = []

[project]
name = "chi_geometry"
version = "0.1.0"
description = "A library for generating geometric chiral datasets."
readme = "README.md"
authors = [
    { name = "Rylie Weaver", email = "rylieweaver9@gmail.com" },
]
license = { text = "MIT" }
keywords = [
    "chiral",
    "chirality",
    "machine-learning",
    "equivariance",
    "equivariant",
    "geometry",
    "torch"
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.5.0",
    "torch>=2.0.0",
    "torch-geometric>=2.0.0",
    "matplotlib>=3.6.0",
]
requires-python = ">=3.8"

[project.urls]
Documentation = "https://github.com/RylieWeaver/Chi-Geometry"
Source = "https://github.com/RylieWeaver/Chi-Geometry"
Tracker = "https://github.com/RylieWeaver/Chi-Geometry/issues"
